# OpenGlTest

./: CMakeLists.txt  README.md
.cache/clangd/index/: IndexBuffer.cpp.52CAD2C6E6E2797D.idx  IndexBuffer.h.5717E74C6C7172D4.idx  Renderer.cpp.16E9BF75D849C298.idx  Renderer.h.9021B854BD863C13.idx  Shader.cpp.134E44EABC1CCFE2.idx  Shader.h.A396F9E640D7BB08.idx  Texture.cpp.A3314F828A5B3060.idx  Texture.h.0CEB85AC38FF88AB.idx  VertexArray.cpp.475EAFF0E30FE4C8.idx  VertexArray.h.992316C1014D7036.idx  VertexBuffer.cpp.B92B1E5BBC858EC5.idx  VertexBuffer.h.BC84D6E2DC571A28.idx  VertexBufferLayout.h.B3B402868C71752D.idx  main.cpp.0AE997A6290EAD81.idx  stb_image.h.2CE3D71C08A760B5.idx
include/: IndexBuffer.h  Initialise.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
include/tests/: Test.h  TestClearColour.h  TestTexture2D.h
res/shaders/: basic.shader
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
src/tests/: Test.cpp  TestClearColour.cpp  TestTexture2D.cpp
